objects/Astonous_SM__Carrier_Key__mdt.object
<CustomObject>
    <description>Key-Value Pair additional carrier specific information</description>
    <fields>
        <fullName>Astonous_SM__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment_Carrier__c</fullName>
        <label>Shipment Carrier</label>
        <referenceTo>Astonous_SM__Shipment_Carrier__mdt</referenceTo>
        <relationshipName>Shipping_Carrier_Configuration</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Carrier Key</label>
    <listViews>
        <fullName>Astonous_SM__All</fullName>
        <columns>MasterLabel</columns>
        <columns>Astonous_SM__Shipment_Carrier__c</columns>
        <columns>Astonous_SM__Key__c</columns>
        <columns>Astonous_SM__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Carrier Keys</pluralLabel>
</CustomObject>